[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm_data_exfiltration_prevention_proxy"
version = "0.1.0"
description = "Prevent sensitive data exfiltration through LLM prompts and outputs."
requires-python = ">=3.10"

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
